<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6C6AD"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="204dp"
        android:background="#B7FFDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/Siren"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/siren" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="582dp"
        android:layout_marginTop="55dp"
        android:background="#F2AA84"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/btnAddLocation"
            android:layout_width="366dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#83CBEB"
            android:onClick="toLocation"
            android:text="@string/add_location"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputContainer"
            android:layout_width="346dp"
            android:layout_height="245dp"
            android:background="#F8F8F8"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnAddLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="Location"
                android:textAlignment="center"
                android:textColor="#070707"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-black"
                android:text="Add location"
                android:textAlignment="center"
                android:textColor="#070707"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="171dp"
                android:layout_height="46dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="#83CBEB"
                android:text="ADD"
                android:textColor="#000000"
                android:textColorLink="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

            <EditText
                android:id="@+id/txtMapName"
                android:layout_width="280dp"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="Location Name"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#A9A8A8"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="#B43737"
                android:onClick="cancelLocation"
                android:text="X"
                android:textColor="#FAF9F9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/svContacts"
            android:layout_width="407dp"
            android:layout_height="484dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/listOfLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/mainActivityTitle"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>